# torch-mist

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  train.py  train_celeba.py
.github/workflows/: ci.yml
config/components/data/: celeba.yaml  celeba_batch.yaml  normal_mixture.yaml
config/components/loggers/: wandb.yaml
config/components/mi_estimators/: A+NWJ.yaml  BA.yaml  InfoNCE.yaml  JS.yaml  MINE.yaml  NWJ.yaml  SMILE.yaml  TUBA.yaml  TUBA_alpha.yaml  V+NWJ.yaml
config/components/optimizers/: adam.yaml
config/components/trainers/: default.yaml
config/experiments/: celeba_infomax.yaml  celeba_infomax_batch.yaml  infomax.yaml  normal_mi_estimation.yaml
config/experiments/MI_estimation/: NWJ.yaml
config/experiments/celeba/: JS+A.yaml  SimCLR+A.yaml  (+3 more)
core/callbacks/: __init__.py  clustering.py  online_ssl.py  predictor.py  variance.py
core/data/: utils.py
core/distributions/: __init__.py  utils.py
core/logging/: log_entry.py  tensorboard.py
core/models/: __init__.py
core/nn/: __init__.py  utils.py
core/optim/: lr_scheduler.py
core/task/: __init__.py  infomax.py  mi_estimation.py
data/: clusters.npy  correlated_clusters_128.npy  correlated_clusters_16.npy  correlated_clusters_2.npy  correlated_clusters_32.npy  correlated_clusters_4.npy  correlated_clusters_64.npy  correlated_clusters_8.npy  iid_clusters.npy  particles.npy
docs/: Makefile  conf.py  example.ipynb  index.rst  make.bat
docs/notebooks/: discriminative.ipynb  generative.ipynb  hybrid.ipynb  installation.ipynb  quantized.ipynb  transformed.ipynb  usage.ipynb
experiments/callbacks/: clustering.py  online_ssl.py  predictor.py
experiments/data/: utils.py
experiments/logging/: __init__.py  wandb.py
notebooks/: multiomniglot.ipynb  normal_mixture_results_neg.ipynb  results_multiomniglot.ipynb  results_normal_mixture.ipynb  simple_task+A.ipynb  simple_task.ipynb  vq.ipynb
scripts/: celeba_landmarks.py  compare_estimators.py  compute_mi.py  run_experiment.py  train_features.py
scripts/config/: config.yaml
scripts/examples/: celeba_landmarks.py
src/torch_mist/: __init__.py  baselines.py  nn.py  quantization.py
sweeps/: multimixture_discriminative_comparison.yml  multimixture_hybrid_comparison.yml  normal_mixture.yaml  normal_mixture_neg.yaml
sweeps/multimixture/: hybrid_resampled_doe.yml  hybrid_resampled_pq.yml
sweeps/multiomniglot/: batch+a.yaml  batch.yaml  clusters.yaml
sweeps/normal_mixture/: batch+a.yaml  batch.yaml  neg+a.yaml  neg.yaml
sweeps/old/: normal_mixture_neg.yaml
sweeps/particles/: batch.yaml  clusters.yaml  fix_attributes.yaml
tests/: test_caching.py  test_data.py  test_decomposition.py  test_estimators.py  test_inputs.py  test_k_fold.py  test_pickling.py  test_sampler.py  test_scripts.py  test_torch_mist.py
(+840 files in other folders)
