[tool.poetry]
name = "torch_mist"
version = "0.1.2"
description = "Mutual Information Estimation toolkit based on pytorch"
authors = ["Marco Federici"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyro-ppl = "^1.8.5"
numpy = "^1.24.0"
torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.2.2"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
